fix(analytics-js): correct declared global extended type

--- a/packages/loading-scripts/package.json
+++ b/packages/loading-scripts/package.json
@@ -38,7 +38,9 @@
     "build:modern": "npm run build:browser:modern"
   },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "@rudderstack/analytics-js": "*"
+  },
   "overrides": {},
   "browserslist": {
     "production": [
