--- a/examples/nextjs/page-router/sample-app/package.json
+++ b/examples/nextjs/page-router/sample-app/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rudderstack/analytics-js": "^3.0.0-beta.13",
+    "@rudderstack/analytics-js": "*",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18"
