--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "declaration": true,
+    "declarationMap": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
