--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "packages/*"
   ],
   "scripts": {
-    "setup": "npm i --include=optional",
-    "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu",
-    "clean": "npm run clean:output && nx reset && git clean -xdf node_modules",
+    "setup": "npm i --include=optional && npm run build:package",
+    "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu && npm run build:package",
+    "clean": "nx run-many -t clean --parallel=false && nx reset && git clean -xdf node_modules",
     "clean:cache": "rimraf -rf ./node_modules/.cache",
-    "clean:output": "nx run-many -t clean --parallel=false",
     "start": "nx run-many --targets=start --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "start:modern": "nx run-many --targets=start-modern --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "build": "nx run-many -t build --parallel=false",
@@ -41,7 +40,7 @@
     "pre-commit": "npm run test && npm run check:size:build && npm run check:size:json && npx lint-staged",
     "commit-msg": "commitlint --edit",
     "commit": "git-cz",
-    "postinstall": "patch-package && npm run build:package",
+    "postinstall": "patch-package",
     "build:integrations": "nx run-many --targets=build-browser,build-browser-modern --parallel=false --projects=@rudderstack/analytics-js-integrations",
     "build:v3": "nx run-many -t build --parallel=false --exclude=rudder-sdk-js,@rudderstack/analytics-js-sanity-suite,@rudderstack/analytics-js-integrations",
     "build:v1.1": "nx run-many -t build --parallel=false --projects=rudder-sdk-js",
