--- a/package.json
+++ b/package.json
@@ -114,15 +114,15 @@
     "@babel/plugin-transform-runtime": "7.23.2",
     "@babel/preset-env": "7.23.2",
     "@babel/preset-typescript": "7.23.2",
-    "@commitlint/config-conventional": "17.8.0",
-    "@commitlint/config-lerna-scopes": "17.7.0",
+    "@commitlint/config-conventional": "18.1.0",
+    "@commitlint/config-lerna-scopes": "18.1.0",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
-    "@jscutlery/semver": "3.4.1",
-    "@nx/eslint-plugin": "16.10.0",
-    "@nx/jest": "16.10.0",
-    "@nx/js": "16.10.0",
-    "@nx/linter": "16.10.0",
-    "@nx/workspace": "16.10.0",
+    "@jscutlery/semver": "4.0.0",
+    "@nx/eslint": "17.0.2",
+    "@nx/eslint-plugin": "17.0.2",
+    "@nx/jest": "17.0.2",
+    "@nx/js": "17.0.2",
+    "@nx/workspace": "17.0.2",
     "@originjs/vite-plugin-federation": "1.3.2",
     "@rollup/plugin-alias": "5.0.1",
     "@rollup/plugin-babel": "6.0.4",
@@ -131,32 +131,32 @@
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-replace": "5.0.4",
     "@rollup/plugin-terser": "0.4.4",
-    "@size-limit/file": "9.0.0",
-    "@size-limit/webpack": "9.0.0",
-    "@types/component-emitter": "1.2.12",
-    "@types/crypto-js": "4.1.2",
-    "@types/jest": "29.5.5",
-    "@types/lodash.clonedeep": "4.5.7",
-    "@types/lodash.isstring": "4.0.7",
+    "@size-limit/file": "10.0.1",
+    "@size-limit/webpack": "10.0.1",
+    "@types/component-emitter": "1.2.13",
+    "@types/crypto-js": "4.1.3",
+    "@types/jest": "29.5.6",
+    "@types/lodash.clonedeep": "4.5.8",
+    "@types/lodash.isstring": "4.0.8",
     "@types/node": "18.17.12",
-    "@types/ramda": "0.29.6",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
+    "@types/ramda": "0.29.7",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "assert": "2.1.0",
     "babel-eslint": "10.1.0",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
-    "commitlint": "17.8.0",
-    "core-js": "3.33.0",
+    "commitlint": "18.2.0",
+    "core-js": "3.33.1",
     "dotenv": "16.3.1",
-    "eslint": "8.51.0",
+    "eslint": "8.52.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-config-prettier": "8.10.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-compat": "4.2.0",
-    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-import": "2.29.0",
     "eslint-plugin-sonarjs": "0.21.0",
     "eslint-plugin-unicorn": "48.0.1",
     "esm": "3.2.25",
@@ -170,11 +170,11 @@
     "jest-sonar": "0.2.16",
     "jest-watch-typeahead": "2.2.2",
     "jscpd": "3.5.10",
-    "lint-staged": "15.0.1",
+    "lint-staged": "15.0.2",
     "madge": "6.1.0",
     "msw": "1.3.2",
     "ngx-deploy-npm": "7.0.1",
-    "nx": "16.10.0",
+    "nx": "17.0.2",
     "patch-package": "8.0.0",
     "prettier": "3.0.3",
     "rollup": "3.29.4",
@@ -191,7 +191,7 @@
     "rollup-plugin-typescript2": "0.36.0",
     "rollup-plugin-visualizer": "5.9.2",
     "serve": "14.2.1",
-    "size-limit": "9.0.0",
+    "size-limit": "10.0.1",
     "standard-version": "9.5.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
@@ -200,13 +200,14 @@
     "user-agent-data-types": "0.4.2"
   },
   "optionalDependencies": {
-    "@nx/nx-darwin-arm64": "16.10.0",
-    "@nx/nx-darwin-x64": "16.10.0",
-    "@nx/nx-linux-x64-gnu": "16.10.0",
-    "@nx/nx-win32-x64-msvc": "16.10.0"
+    "@nx/nx-darwin-arm64": "17.0.2",
+    "@nx/nx-darwin-x64": "17.0.2",
+    "@nx/nx-linux-x64-gnu": "17.0.2",
+    "@nx/nx-win32-x64-msvc": "17.0.2"
   },
   "overrides": {
     "@babel/traverse": "7.23.2",
+    "@nx/devkit": "17.0.2",
     "debug": "4.3.4"
   },
   "lint-staged": {
