--- a/package.json
+++ b/package.json
@@ -177,7 +177,7 @@
     "nx": "17.0.2",
     "patch-package": "8.0.0",
     "prettier": "3.0.3",
-    "rollup": "3.29.4",
+    "rollup": "4.1.4",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-dts": "6.1.0",
@@ -208,7 +208,8 @@
   "overrides": {
     "@babel/traverse": "7.23.2",
     "@nx/devkit": "17.0.2",
-    "debug": "4.3.4"
+    "debug": "4.3.4",
+    "rollup": "4.1.4"
   },
   "lint-staged": {
     "*.{json,js,md,ts}": "prettier --write"
