ci(monorepo): export BUNDLED_PLUGINS for LH bundle build

--- a/.github/workflows/deploy-staging-v3.yml
+++ b/.github/workflows/deploy-staging-v3.yml
@@ -65,6 +65,7 @@ jobs:
           BUGSNAG_RELEASE_STAGE: 'development'
           BUNDLED_PLUGINS: 'StorageEncryptionLegacy,XhrQueue'
         run: |
+          export BUNDLED_PLUGINS='StorageEncryptionLegacy,XhrQueue'
           npm run clean:cache
           npm run build:browser:LH
 
