--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -72,7 +72,8 @@
     "check:security": "npm audit --recursive --audit-level=high",
     "build:modern": "npm run build:browser:modern && npm run build:npm:modern",
     "package": "npm pack",
-    "release": "npm publish"
+    "release": "npm publish",
+    "build:browser:LH": "nx run @rudderstack/analytics-js:build-browser && nx run @rudderstack/analytics-js:build-browser-modern"
   },
   "devDependencies": {
     "@lukeed/uuid": "2.0.1",
