chore: update source configuration response test data

--- a/packages/sanity-suite/__fixtures__/sourceConfig1.json
+++ b/packages/sanity-suite/__fixtures__/sourceConfig1.json
@@ -1,4 +1,16 @@
 {
+  "consentManagementMetadata": {
+    "providers": [
+      {
+        "provider": "oneTrust",
+        "resolutionStrategy": "and"
+      },
+      {
+        "provider": "ketch",
+        "resolutionStrategy": "or"
+      }
+    ]
+  },
   "source": {
     "id": "2L8FlAECp1sEUP7NVilWLTeA2wp",
     "name": "JS SDK Prod",
