--- a/packages/sanity-suite/.env.example
+++ b/packages/sanity-suite/.env.example
@@ -3,9 +3,11 @@ WRITE_KEY=
 DATAPLANE_URL=
 CONFIG_SERVER_HOST=https://api.rudderstack.com
 DEST_SDK_BASE_URL=https://cdn.rudderlabs.com/v1.1/js-integrations/
+REMOTE_MODULES_BASE_PATH=
 BUGSNAG_API_KEY=
-BUGSNAG_RELEASE_STAGE=
+BUGSNAG_RELEASE_STAGE=development
 CDN_VERSION_PATH=v1.1
 FEATURE_PRELOAD_BUFFER_WRITE_KEY=
 FEATURE_EVENT_FILTERING_WRITE_KEY=
 FEATURE_DATA_RESIDENCY_WRITE_KEY=
+IS_DEV_TESTBOOK=false
