chore(monorepo): remove verbatimModuleSyntax checks from test files

--- a/packages/analytics-js-common/tsconfig.spec.json
+++ b/packages/analytics-js-common/tsconfig.spec.json
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "inlineSourceMap": true,
     "isolatedModules": true,
+    "verbatimModuleSyntax": false,
     "types": ["jest", "node"]
   },
   "include": [
