feat(analytics-js-loading-scripts): add version for loading snippet

--- a/examples/reactjs/vite/sample-app/package.json
+++ b/examples/reactjs/vite/sample-app/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rudderstack/analytics-js": "*",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@rudderstack/analytics-js": "*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
