--- a/examples/gatsby/sample-gatsby-site/package.json
+++ b/examples/gatsby/sample-gatsby-site/package.json
@@ -26,5 +26,12 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "typescript": "^5.1.6"
+  },
+  "overrides": {
+    "@babel/traverse": "7.23.2",
+    "decode-uri-component": "0.2.1",
+    "http-cache-semantics": "4.1.1",
+    "json5": "2.2.3",
+    "yaml": "2.3.4"
   }
 }
