--- a/examples/reactjs/js/sample-app/package.json
+++ b/examples/reactjs/js/sample-app/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rudderstack/analytics-js": "*",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@rudderstack/analytics-js": "*"
+    "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "nth-check": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
