--- a/.github/workflows/deploy-npm-v3.yml
+++ b/.github/workflows/deploy-npm-v3.yml
@@ -67,7 +67,7 @@ jobs:
           NPM_CONFIG_PROVENANCE: true
         run: |
           npm set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
-          npx nx release publish -- --base=${{ env.last_monorepo_version }} --head=${{ env.current_monorepo_version }}
+          npx nx release publish --base=${{ env.last_monorepo_version }} --head=${{ env.current_monorepo_version }}
 
       - name: Send message to Slack channel for v3
         id: slack
