--- a/packages/analytics-js-integrations/package.json
+++ b/packages/analytics-js-integrations/package.json
@@ -79,12 +79,12 @@
   },
   "dependencies": {
     "ramda": "0.29.1",
-    "@rudderstack/analytics-js-common": "*",
-    "get-value": "3.0.1",
+        "@rudderstack/analytics-js-common": "*",
+        "get-value": "3.0.1",
     "@ndhoule/each": "2.0.1",
     "lodash.get": "4.4.2",
-    "lodash.isequal": "4.5.0",
-    "obj-case": "0.2.1",
+        "lodash.isequal": "4.5.0",
+"obj-case": "0.2.1",
     "on-body": "0.0.1",
     "md5": "2.3.0",
     "crypto-js": "4.1.1",
@@ -94,7 +94,7 @@
     "lodash.isundefined": "3.0.1",
     "lodash.isempty": "4.4.0",
     "lodash.pickby": "4.6.0",
-    "lodash.pick": "4.4.0",
+"lodash.pick": "4.4.0",
     "lodash.tostring": "4.1.4",
     "@lukeed/uuid": "2.0.1"
   },
@@ -105,6 +105,7 @@
     "@rudderstack/analytics-js-common": "*",
     "component-each": "0.2.6",
     "crypto-js": "4.2.0",
+    "each": "^2.6.0",
     "get-value": "3.0.1",
     "is": "3.3.0",
     "lodash.get": "4.4.2",
