--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 * @saikumarrs @MoumitaM @bardisg
-/packages/analytics-js-integrations/ @ItsSudip @shrouti1507 @sandeepdsvs @koladilip
+/packages/analytics-js-integrations/ @ItsSudip @shrouti1507 @sandeepdsvs @koladilip @mihir-4116 
