--- a/packages/analytics-js-integrations/package.json
+++ b/packages/analytics-js-integrations/package.json
@@ -105,6 +105,7 @@
     "@rudderstack/analytics-js-common": "*",
     "component-each": "0.2.6",
     "crypto-js": "4.2.0",
+    "each": "^2.6.0",
     "get-value": "3.0.1",
     "is": "3.3.0",
     "lodash.get": "4.4.2",
