chore(examples): change and author name

--- a/examples/gatsby/sample-gatsby-site/package.json
+++ b/examples/gatsby/sample-gatsby-site/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "sample-gatsby-site",
-  "author": "MoumitaM",
+  "author": "RudderStack",
   "keywords": [
     "gatsby"
   ],
