--- a/packages/analytics-js-service-worker/package.json
+++ b/packages/analytics-js-service-worker/package.json
@@ -70,11 +70,11 @@
     "component-type": "1.2.1",
     "join-component": "1.1.0",
     "lodash.clonedeep": "4.5.0",
-    "lodash.isstring": "4.0.1"
+    "lodash.isstring": "4.0.1",
+    "ms": "2.1.3"
   },
   "devDependencies": {
     "@types/node": "20.11.3",
-    "ms": "2.1.3",
     "jest-date-mock": "1.0.8",
     "msw": "1.3.2"
   },
