fix(analytics-js-sanity-suite): sort sourceConfig response destinations

--- a/packages/sanity-suite/__fixtures__/sourceConfig1.json
+++ b/packages/sanity-suite/__fixtures__/sourceConfig1.json
@@ -110,7 +110,8 @@
                 "attribution",
                 "eventUploadThreshold",
                 "eventUploadPeriodMillis",
-                "trackNewCampaigns"
+                "trackNewCampaigns",
+                "proxyServerUrl"
               ],
               "android": [
                 "eventUploadPeriodMillis",
@@ -202,7 +203,8 @@
               "eventUploadPeriodMillis",
               "trackNewCampaigns",
               "userProvidedScreenEventString",
-              "useUserDefinedScreenEventName"
+              "useUserDefinedScreenEventName",
+              "proxyServerUrl"
             ],
             "transformAtV1": "processor",
             "isAudienceSupported": false,
