--- a/packages/analytics-js-plugins/package.json
+++ b/packages/analytics-js-plugins/package.json
@@ -67,14 +67,13 @@
     "release": "npm publish"
   },
   "dependencies": {
-    "msw": "1.3.2",
     "@preact/signals-core": "1.5.1",
-    "ramda": "0.29.1",
     "crypto-es": "2.0.4",
-    "@bugsnag/core": "7.19.0"
+    "msw": "1.3.2",
+    "ramda": "0.29.1",
+    "error-stack-parser": "2.1.4"
   },
   "devDependencies": {
-    "@bugsnag/js": "6.5.2",
     "@lukeed/uuid": "2.0.1",
     "@preact/signals-core": "1.5.1",
     "@rudderstack/analytics-js-common": "*",
