chore(monorepo): update monorepo dev dependencies

--- a/nx.json
+++ b/nx.json
@@ -4,6 +4,17 @@
     "libsDir": "packages"
   },
   "defaultBase": "main",
+  "release": {
+    "projects": ["*"],
+    "version": {
+      "conventionalCommits": true
+    },
+    "changelog": {
+      "workspaceChangelog": {
+        "createRelease": "github"
+      }
+    }
+  },
   "pluginsConfig": {
     "@nx/js": {
       "analyzeSourceFiles": true
